changed the color

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,7 +8,7 @@
   width: 45%;
   margin: 0 10px;
   min-height: 200px;
-  background-color: lightblue;
+  background-color: rgb(132, 213, 240);
   display: flex;
   flex-direction: column;
   align-items: center;
